deploy/signoz-ingress/templates/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: routes
  namespace: default
spec:
  routes:                          
  - kind: Rule
    match: PathPrefix(`/`) && !(PathPrefix(`/executions`) || PathPrefix(`/dashboard`) || PathPrefix(`/workflows`)) 
    services:                       
    - kind: Service
      name: logging-signoz-frontend
      port: 3301
